first implementation of the model + repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#Global configuration
+spring.application.name=SAFETYNETwithoutDB
 
+#Log level configuration
+logging.level.root=INFO
+logging.level.com.openclassrooms=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
